# nextjs-fastapi-postgres-starter

./: .gitignore  docker-compose.yml
backend/: client.py  db_engine.py  main.py  models.py  pyproject.toml  seed.py
frontend/app/: page.tsx
frontend/app/components/: ChatWindow.tsx
